<resources>
    <string name="app_name">PasbaraTheater0.1</string>
    <string name="forgotYourPassword">Forgot Your Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="sign_in_to_your_account">Sign in to your Account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_address">Email Address</string>
    <string name="go_to_sign_in">Go to Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="contact">Contact</string>
    <string name="your_name">Your Name</string>
    <string name="sign_up_to_your_account">Sign Up to Your Account</string>
    <string name="register">Register</string>
    <string name="go_to_sign_up">Go to Sign Up</string>
    <string name="tv_shows">TV Shows</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="also_playing">Also playing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="book">Book</string>
    <string name="dumy_story">Needing money to cover his wife\'s medical bills, a decorated veteran teams up with his adoptive brother to steal $32 million from a Los Angeles bank. However, when their getaway goes spectacularly wrong, the desperate thieves hijack an ambulance that\'s carrying a severely wounded cop and an EMT worker. Caught in a high-speed chase, the two siblings must figure out a way to outrun the law while keeping their hostages alive.</string>
    <string name="movies">Movies</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="booking_history">Booking History</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="prince_tachalla">Prince Tachalla</string>
    <string name="verified">Verified</string>
    <string name="fantastic_movie">Fantastic Movie</string>
    <string name="shot_views">Shot Views</string>
    <string name="more">more</string>
    <string name="total_booking">Total Booking</string>
    <string name="view">view</string>
    <string name="dummy_movie_title">Uncharted 2023</string>
    <string name="qr_code_for_tickets">QR code for tickets.</string>
    <string name="dumy_date">2023-11-28 17:30</string>
    <string name="my_profile">My Profile</string>
    <string name="manage_my_profile">Manage my profile</string>
    <string name="my_collection">My Collection</string>
    <string name="sort">sort</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="filter">Filter</string>
</resources>