<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/colored_profile"
        android:title="@string/profile"/>

    <item
        android:id="@+id/menuLogin"
        android:icon="@drawable/colored_login"
        android:title="@string/login"/>

    <item
        android:id="@+id/menuRegister"
        android:icon="@drawable/colored_register"
        android:title="@string/register"/>

    <item
        android:id="@+id/menuHistory"
        android:icon="@drawable/colored_history"
        android:title="@string/booking_history"/>

    <item
        android:id="@+id/menuNotification"
        android:icon="@drawable/colored_notification"
        android:title="@string/notification"/>

    <item
        android:id="@+id/menuSettings"
        android:icon="@drawable/colored_setting"
        android:title="@string/settings"/>

    <item
        android:id="@+id/menuLogout"
        android:icon="@drawable/colored_logout"
        android:title="@string/logout"/>

</menu>