<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieRecyclerViewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/movieRecyclerConstraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorBackground"
    tools:context=".MovieRecyclerViewActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu"
            app:tint="@color/colorTextIcons" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/movies"
            android:textColor="@color/colorTextIcons"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/searchButtonRecyclerView"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/colorTextIcons" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tvShowsRecyclerView"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonGoToBooking"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/background_for_sign_in_button"
            android:text="@string/book"
            android:textAllCaps="true"
            android:textColor="@color/colorTextIcons"
            android:textSize="15dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <!--        android:background="@color/colorAccent"-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        android:backgroundTint="@color/white"
        app:headerLayout="@layout/layout_navigation_header"
        app:theme="@style/NavigationViewTheme"/>

</androidx.drawerlayout.widget.DrawerLayout>


