<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FilterActiviy">

     <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            tools:context=".MainActivity">

            <View
                android:id="@+id/viewHeaderBackground"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:background="@color/dark_red"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgViewLocation"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_location"
                app:layout_constraintBottom_toBottomOf="@id/textTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textTitle"
                android:tint="@color/white"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="-50dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:layout_constraintTop_toBottomOf="@id/viewHeaderBackground">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="14dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sort"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/textMenu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:textColor="@color/dark_yellow"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <LinearLayout
                        android:id="@+id/layoutSearchableSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/background_input"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@id/textView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_search"
                            app:tint="@color/dark_yellow" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/testView"
                            android:hint="Select course"
                            android:padding="12dp"
                            android:gravity="center_vertical"
                            android:drawableEnd="@drawable/ic_arrow_down"
                            android:background="@android:drawable/editbox_background"
                            />

                    </LinearLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/layoutSearchableSpinner">

                        <LinearLayout
                            android:id="@+id/layoutGenre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/background_input"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            app:layout_constraintTop_toTopOf="parent">

                            <ImageView
                                android:layout_width="22dp"
                                android:layout_height="22dp"
                                android:layout_marginStart="10dp"
                                android:contentDescription="@string/app_name"
                                android:src="@drawable/ic_movie"
                                app:tint="@color/dark_yellow" />

                            <GridLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="10dp"
                                android:columnCount="2">

                                <CheckBox
                                    android:id="@+id/checkboxAction"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/action" />

                                <CheckBox
                                    android:id="@+id/checkboxAdventure"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:text="@string/adventure" />

                                <CheckBox
                                    android:id="@+id/checkboxHorror"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Horror" />

                                <CheckBox
                                    android:id="@+id/checkboxThriller"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:text="Thriller" />

                                <CheckBox
                                    android:id="@+id/checkboxDrama"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Drama" />

                                <CheckBox
                                    android:id="@+id/checkboxFamily"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:text="Family" />

                                <CheckBox
                                    android:id="@+id/checkboxChildren"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Children" />

                                <CheckBox
                                    android:id="@+id/checkboxAnimation"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:text="Animation" />


                            </GridLayout>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="41dp"
                            android:background="@color/white"
                            android:paddingStart="6dp"
                            android:paddingEnd="6dp"
                            android:text="Genre"
                            android:textAllCaps="true"
                            android:textColor="@color/colorTextSecondary"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@id/layoutGenre"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@id/layoutGenre" />

                    </androidx.constraintlayout.widget.ConstraintLayout>



                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/tvShowsRecyclerView"
             android:layout_width="match_parent"
             android:layout_marginBottom="30dp"
             android:layout_height="0dp"
             android:clipToPadding="false"
             android:orientation="vertical"
             android:padding="5dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/cardHeader"/>

         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/buttonGoToBooking"
             android:layout_width="match_parent"
             android:layout_height="43dp"
             android:layout_marginStart="40dp"
             android:layout_marginEnd="40dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/background_for_sign_in_button"
             android:text="@string/book"
             android:textAllCaps="true"
             android:textColor="@color/colorTextIcons"
             android:textSize="15dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.drawerlayout.widget.DrawerLayout>


<!--<ScrollView-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="0dp"-->
<!--android:clipToPadding="false"-->
<!--android:overScrollMode="never"-->
<!--android:padding="16dp"-->
<!--android:scrollbars="none"-->
<!--app:layout_constraintBottom_toBottomOf="parent"-->
<!--app:layout_constraintTop_toBottomOf="@id/cardHeader">-->

<!--<LinearLayout-->
<!--    android:id="@+id/linearLayoutFilterContainer"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:orientation="vertical">-->

<!--    <include layout="@layout/item_container_tv_shows"/>-->


<!--</LinearLayout>-->

<!--</ScrollView>-->